# cmake-gradle-plugin

./: README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: gradle-publish.yml
example/hello-world/: build.gradle.kts  settings.gradle.kts
example/hello-world/src/main/cxx/: CMakeLists.txt  hello.cxx
example/jni-library/: build.gradle.kts  settings.gradle.kts
example/jni-library/src/main/cxx/: CMakeLists.txt  JNILibrary.h  jni_library.cpp
example/jni-library/src/main/java/: JNILibrary.java
example/jni-library/src/main/resources/: libjnilibrary.dylib
gradle/wrapper/: gradle-wrapper.properties
src/main/java/dev/glorrian/cmakegradleplugin/: CMakeBuildTask.java  CMakeConfigurationTask.java  CMakeExecutor.java  CMakeExtension.java  CMakePlugin.java  CMakeTask.java
src/main/java/dev/infochem/cmakegradleplugin/: CMakeBuildTask.java  CMakeConfigurationTask.java  CMakeExecutor.java  CMakeExtension.java  CMakePlugin.java  CMakeTask.java
src/main/java/ru/infochem/cmakegradleplugin/: CMakeBuildTask.java  CMakeConfigurationTask.java  CMakeExecutor.java  CMakeExtension.java  CMakePlugin.java
src/main/resources/html/: allclasses-index.html  allpackages-index.html  constant-values.html  element-list  help-doc.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  type-search-index.js
src/main/resources/html/index-files/: index-1.html  index-10.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
src/test/resources/dev/infochem/cmakegradleplugin/testjnilibrary/jni_project/: CMakeLists.txt  dev_infochem_cmakegradleplugin_testjnilibrary_JNILinker.h  jni_library.cpp
(+49 files in other folders)
